--- a/css/output.css
+++ b/css/output.css
@@ -21,7 +21,7 @@ body {
 
 .big_nav {
   position: fixed;
-  z-index: 999999999;
+  z-index: 1000;
   width: 100%;
   height: 100px;
   background: #00a478;
@@ -55,7 +55,7 @@ body {
         font-size: 11px; }
 
 .big_nav_shrink {
-  height: 90px;
+  height: 100px;
   -webkit-transform: translate(0, -3em);
   -moz-transform: translate(0, -3em);
   -o-transform: translate(0, -3em);
@@ -559,7 +559,7 @@ footer {
   position: absolute;
   content: "";
   pointer-events: none;
-  z-index: 9999999999;
+  z-index: 999;
   left: 19%;
   width: 30%;
   height: 30px;
@@ -590,7 +590,7 @@ footer {
   position: absolute;
   content: "";
   pointer-events: none;
-  z-index: 9999999999;
+  z-index: 999;
   left: 0;
   width: 30%;
   height: 30px;
